# painEngine

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  compile.sh
Libs/lib/: freetype.lib
include/: pain_app.h  pain_debug.h  pain_device.h  pain_model.h  pain_pipeline.h  pain_swapchain.h  pain_window.h
res/: Untitled.blend
src/: main.cpp  pain_app.cpp  pain_device.cpp  pain_device.cpp~  pain_model.cpp  pain_pipeline.cpp  pain_swapchain.cpp  pain_window.cpp
src/shaders/: default.frag  default.vert
